--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,10 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+cdk = { git = "https://github.com/cashubtc/cdk" }
+tokio = { version = "1.38.0", features = ["full"] }
+anyhow = "1.0.86"
+rand = "0.8.5"
+futures = "0.3.30"
+tracing-subscriber = "0.3.18"
+tracing = "0.1.40"
